# The-Substitution

./: .gitignore  README 2.md  README.md  config.yaml  passthrough_20241017-0052.yml  pyproject.toml  requirements.txt
bootstrap/: install_linux.sh  install_macos.sh  train_cloud.sh  train_huggingface.sh  verify_environment.sh
datasets/: clean_datasets.py  download_datasets.py  prepare_training_data.py  verify_datasets.py
deployment/: build_model_card.py  huggingface_push.py
errors/: pastebin.txt
evaluation/: evaluation_config.yaml  generate_report.py  run_benchmarks.py
inference/: api_server.py  local_inference.py
mergekit-bak/mergekit.egg-info/: PKG-INFO  SOURCES.txt
mergekit-bakugan/mergekit/scripts/: run_yaml.py
mergekit-bakugan/witchesbrew/: mergekit_template.sh  mergekit_template_slerp_20241103-0057.py  slerp_20241017-0040.yml  slerp_20241203-0839.yml
mergekit-main/mergekit.egg-info/: PKG-INFO  requires.txt
mergekit-main/mergekit/witchesbrew/: clean_mergekit-run_20241104-0228.py  clean_mergekit-run_20241104-0228.sh  dare_20241203-0708.yml  passthrough_20241017-0021.yml  passthrough_20241017-0052.yml  passthrough_20241103-0057.yml  run-mergekit_template_slerp_20241103-1152.sh  slerp_20241103-0057.yml  (+1 more)
mergekit/mergekit.egg-info/: SOURCES.txt  entry_points.txt
model_card/: README.md
tokenizer/: build_tokenizer.py
training/: lora_config.yaml  train_model.py  training_config.yaml
witchesbrew/: README.md  huggingface_merge_upload_template.py  slerp_20241102-1336.yml  slerp_20241103-0057.yml
witchesbrew/witchesbrew/: slerp_20241103-0057.yml
(+11 files in other folders)
